1.21.1 1.1.0.3 forge and fix
# Conflicts:
#	forge/build.gradle
#	forge/src/main/java/com/kwwsyk/endinv/forge/integrates/jei/AttachmentGuiHandler.java
#	forge/src/main/java/com/kwwsyk/endinv/forge/network/ModPayloadHandler.java
#	gradle.properties