@@ -10,7 +10,7 @@ buildscript {
 }
 
 plugins {
-    id 'net.minecraftforge.gradle' version '6.+'
+    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
     id 'idea'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
@@ -21,6 +21,66 @@ base {
     archivesName = "${mod_name}-${project.name}-${minecraft_version}-${mod_version}"
 }
 
+minecraft {
+    mappings channel: "parchment", version: "${parchment_version}-${parchment_minecraft}"
+
+    copyIdeResources.set(true)
+
+    runs {
+        // applies to all the run configs below
+        configureEach {
+/*            mods{
+                "${mod_id}" {
+                    source(sourceSets.main)
+                    //source(project(":common").sourceSets.main)
+                }
+            }*/
+
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            // The markers can be added/remove as needed separated by commas.
+            // "SCAN": For mods scan.
+            // "REGISTRIES": For firing of registry events.
+            // "REGISTRYDUMP": For getting the contents of all registries.
+            property 'forge.logging.markers', 'REGISTRIES'
+
+
+            // Recommended logging level for the console
+            // You can set various levels here.
+            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+            property 'forge.logging.console.level', 'debug'
+        }
+
+        client {
+            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+            property 'forge.enabledGameTestNamespaces', mod_id
+
+            arg "-Dnet.minecraftforge.gradle.check.certs=false"
+        }
+
+        server {
+            property 'forge.enabledGameTestNamespaces', mod_id
+            args '--nogui'
+        }
+
+        // This run config launches GameTestServer and runs all registered gametests, then exits.
+        // By default, the server will crash when no gametests are provided.
+        // The gametest system is also enabled by default for other run configs under the /test command.
+        gameTestServer {
+            property 'forge.enabledGameTestNamespaces', mod_id
+        }
+
+        data {
+            // example of overriding the workingDirectory set in configureEach above
+            workingDirectory project.file('run-data')
+
+            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+        }
+    }
+}
+
 mixin {
     add(sourceSets.main, "${mod_id}.refmap.json")
 
@@ -28,38 +88,10 @@ mixin {
     config("${mod_id}.experimental.mixins.json")
 }
 
-minecraft {
-    mappings channel: "parchment", version: "${parchment_version}-${parchment_minecraft}"
-
-    runs {
-        client {
-//            property 'mixin.env.remapRefMap', 'true'
-//            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-        }
-        data {
-            workingDirectory project.file('run-data')
-
-            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-        }
-        server {
-
-        }
-        configureEach {
-            mods {
-                "${mod_id}" {
-                    source(sourceSets.main)
-                    //source(project(":common").sourceSets.main)
-                }
-            }
-            jvmArg '--add-opens=java.base/java.lang.ref=ALL-UNNAMED'
-            jvmArg "-Dforge.logging.console.level=debug"
-            jvmArg "-Dforge.logging.markers=LOADING,MODSCAN,CLASSLOADING"
-        }
-    }
+// Include resources generated by data generators.
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
 }
-
-sourceSets.main.resources.srcDir 'src/generated/resources'
 
 repositories {
     maven { url = 'https://maven.parchmentmc.org' }
@@ -87,10 +119,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-    maven {
+/*    maven {
         name = "Curios"
         url = uri("https://maven.theillusivec4.top/")
-    }
+    }*/
     maven {
         name = "Cloth Config"
         url = uri("https://maven.shedaniel.me/")
@@ -98,7 +130,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(":common")
+    compileOnly project(":common")
 
     implementation 'org.jetbrains:annotations:24.0.1'
 
@@ -109,15 +141,18 @@ dependencies {
     /* other minecraft dependencies are here */
     //compileOnly("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
     // at runtime, use the full JEI jar for Forge
-    //implementation(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
+    implementation(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
     //NOTE: curios has no more forge version
 
     implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
+
+    // Hack fix for now, force jopt-simple to be exactly 5.0.4 because Mojang ships that version, but some transtive dependencies request 6.0+
+    implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
 }
 
 processResources {
-    var expandProps = [
+    var replaceProperties = [
             'version'                      : mod_version,
             'group'                        : project.group, //Else we target the task's group.
             'minecraft_version'            : minecraft_version,
@@ -129,29 +164,27 @@ processResources {
             'mod_id'                       : mod_id,
             'license'                      : mod_license,
             'description'                  : mod_description,
-            "forge_version"                :        forge_version,
+            "forge_version"                : forge_version,
             "forge_loader_version_range"   : forge_loader_version_range,
             'credits'                      : credits,
             'java_version'                 : java_version
     ]
 
-    var jsonExpandProps = expandProps.collectEntries {
-        key, value -> [(key): value instanceof String ? value.replace("\n", "\\\\n") : value]
+    inputs.properties replaceProperties
+
+    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
+        expand replaceProperties + [project: project]
     }
 
-    filesMatching(['META-INF/mods.toml']) {
-        expand expandProps
-    }
-
-    filesMatching(['pack.mcmeta', 'fabric.mod.json', '*.mixins.json']) {
-        expand jsonExpandProps
-    }
-
-    inputs.properties(expandProps)
+    from project(':common').sourceSets.main.resources
 }
 
+compileJava {
+    source(project(':common').sourceSets.main.allSource)
+}
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     finalizedBy('reobfJar')
     from(project(':common').sourceSets.main.output)
     manifest.attributes([
@@ -163,15 +196,20 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
 
-// Exclude incompatible or legacy sources from the 1.21 Forge build
-sourceSets {
-    main {
-        java {
-            exclude 'com/kwwsyk/endinv/forge/integrates/jei/experimental/**'
-            exclude 'com/kwwsyk/endinv/forge/integrates/jei/experimental/mixin/BasicRecipeTransferHandlerMixin.java'
-            exclude 'com/kwwsyk/endinv/forge/network/ModPacketHandler.java'
-            exclude 'com/kwwsyk/endinv/forge/events/PayloadReg.java'
-            exclude 'com/kwwsyk/endinv/forge/network/payloads/JeiAttachedTransferPayload.java'
-        }
-    }
+// Merge the resources and classes into the same directory.
+// This is done because java expects modules to be in a single directory.
+// And if we have it in multiple we have to do performance intensive hacks like having the UnionFileSystem
+// This will eventually be migrated to ForgeGradle so modders don't need to manually do it. But that is later.
+sourceSets.each {
+    def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
+    it.output.resourcesDir = dir
+    it.java.destinationDirectory = dir
 }
+
+
+//gradle.taskGraph.whenReady { graph ->
+//    // If running the client or server in development, merge resources with classes
+//    if (graph.hasTask(":runClient") || graph.hasTask(":runServer")) {
+//        sourceSets.main.output.resourcesDir = file("$buildDir/classes/java/main")
+//    }
+//}
